--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon server.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "express": "^4.17.3",
-    "hammerjs": "^2.0.8",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "tone": "^14.7.77",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
-    "vite": "^2.9.5",
-    "vite-plugin-mix": "^0.3.1"
+    "nodemon": "^2.0.15",
+    "vite": "^2.9.5"
   }
 }
