--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "pinia": "^2.0.13",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "tone": "^14.7.77",
