--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "nodemon": "^2.0.15",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "vite-plugin-favicon": "^1.0.8"
   }
 }
