--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
     "express": "^4.17.3",
     "pinia": "^2.0.13",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "tone": "^14.7.77",
+    "vite": "^6.2.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
     "nodemon": "^2.0.15",
-    "vite": "^2.9.5"
+    "vite-plugin-qrcode": "^0.2.4"
   }
 }
