--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "express": "^4.17.3",
     "pinia": "^2.0.13",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "tone": "^14.7.77",
